--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: accommodation-marketplace
   datasource:
-    url: ${ jdbc:mysql://localhost:3306/ }
-    user: ${ root }
-    password: ${ root }
+    url: ${DATASOURCE_URL:jdbc:mysql://localhost:3306/accommodation_db}
+    user: ${MYSQL_USERNAME:root}
+    password: ${MYSQL_PASSWORD:root}
   jpa:
     show-sql: true
     open-in-view: false
