created user entity

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: accommodation-marketplace
+  config:
+    import: optional:file:.env[.properties]
   datasource:
     url: ${DATASOURCE_URL:jdbc:mysql://localhost:3306/accommodation_db}
     user: ${MYSQL_USERNAME:root}
