--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,14 @@
 spring:
-  application:
-    name: accommodation-marketplace
-  config:
-    import: optional:file:.env[.properties]
   datasource:
-    url: ${DATASOURCE_URL:jdbc:mysql://localhost:3306/accommodation_db}
-    user: ${MYSQL_USERNAME:root}
-    password: ${MYSQL_PASSWORD:root}
+    url: jdbc:mysql://localhost:3306/accomodation_db
+    username: root
+    password: root
+
   jpa:
-    show-sql: true
-    open-in-view: false
     hibernate:
       ddl-auto: update
+    show-sql: true
     properties:
       hibernate:
-        format_sql: false
-  cache:
-    type: caffeine
-
-  security:
-    oauth2:
+        dialect: org.hibernate.dialect.MySQLDialect
 
