Add JWT implementation with environment-based secret loading and token generation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,8 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
 
+# Custom application configuration
+app:
+  jwt:
+    secret: ${JWT_SECRET}
+
