--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# JWT secret (must be Base64-encoded and at least 256 bits)
+JWT_SECRET=JWua+nSeI3rYwqgI47wpZxVstF1ZYQUun4DNCJS4IrI=
+
 DATASOURCE_URL=
 MYSQL_USERNAME=
 MYSQL_PASSWORD=
